번들링된 js 사용하도록 변경

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     </div>
   </div>
 
+  <!-- emoji.js는 그대로 유지해요 -->
   <script src="./emoji.js"></script>
-  <script src="./main.js"></script>
+
+  <!-- main.js 대신 번들링된 스크립트를 사용해요 -->
+  <!-- <script src="./main.js"></script> -->
+  <script src="./dist/bundle.js"></script>
 </body>
 </html>
