--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </div>
   </div>
 
-  <!-- emoji.js는 그대로 유지해요 -->
-  <script src="./emoji.js"></script>
-
-  <!-- main.js 대신 번들링된 스크립트를 사용해요 -->
+  <!-- 개별 스크립트는 더 이상 필요 없음 -->
+  <!-- <script src="./emoji.js"></script> -->
   <!-- <script src="./main.js"></script> -->
+
+  <!-- 번들링된 스크립트만 사용 -->
   <script src="./dist/bundle.js"></script>
 </body>
 </html>
