--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Emoji of the Day</title>
   
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/date-fns@3.6.0/cdn.min.js"></script>
+  <!-- CDN 스크립트도 더 이상 필요 없음 -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/date-fns@3.6.0/cdn.min.js"></script> -->
   
   <link rel="stylesheet" href="./style.css">
 </head>
