--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emoji of the Day</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+  <!-- HTML에 넣었던 style을 지워주세요 -->
+  <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 <body>
   <!-- 기존 HTML을 모두 잘라냈어요 -->
