--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emoji of the Day</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-  <!-- HTML에 넣었던 style을 지워주세요 -->
-  <!-- <link rel="stylesheet" href="./style.css"> -->
+  <!-- HTML에 넣었던 폰트 파일 링크를 지워주세요 -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet"> -->
 </head>
 <body>
-  <!-- 기존 HTML을 모두 잘라냈어요 -->
   <div id="root"></div>
   <script src="./dist/bundle.js"></script>
 </body>
